--- a/index.html
+++ b/index.html
@@ -8,18 +8,45 @@
 
   <body>
     <header>
-      <nav>
-        <ul>
-          <li>
-            <a href='#'>New Question</a>
-          </li>
-          <li>
-            <a href='#'>About</a>
-          </li>
-        </ul>
-      </nav>
+        <nav>
+          <ul>
+            <li>
+              <a href='#'>New Question</a>
+            </li>
+            <li>
+              <a href='#'>About</a>
+            </li>
+          </ul>
+        </nav>
 
-      <h3><a href='/'>Icebreakers</a></h3>
+        <h3><a href='/'>Icebreakers</a></h3>
     </header>
+    <main>
+      <div>
+        <h1>This is my Main Heading AWESOME</h1>
+          <p>This paragraph describes my site MORE AWESOME</p>
+      </div>
+      <div>
+        <h4>
+
+        </h4>
+
+        <h4>
+
+        </h4>
+
+        <p>
+
+        </p>
+
+        <p>
+
+        </p>
+
+      </div>
+
+
+    </main>
+    
   </body>
 </html>
