automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
           </p>
         </h4>
       </div>
-
-
     </main>
-
+    <footer>
+      <p>Copyright info</p>
+    </footer>
   </body>
 </html>
